# rc-car

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  bluetooth.gatt  bluetooth_peripheral.gatt  main.c
include/: btstack_config.h
include/audio/: pam8403.h  stream.h
include/bt/: btstack_config_common.h  peripheral.h
include/car/: car_control.h
include/motor/: tb6612fng.h
include/speech/: wifi.h
include/wifi/: network.h
src/: main.c  tmain.c
src/audio/: pam8403.c  stream.c
src/bt/: bp.gatt  bt.c
src/car/: car_control.c
src/motor/: tb6612fng.c
src/wifi/: server.c
